--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
 group = 'org.apache.hbase'
-version = '1.2.1'
+version = 'v1.2.1'
 
 repositories {
     mavenCentral()
