--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ apply plugin: 'maven-publish'
 group = 'org.apache.hbase'
 version = '1.2.1'
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.5'
+}
+
 repositories {
     mavenCentral()
     mavenLocal()
